feat: Archive finished games (#90, PR #95)
* chore: a lot of changes

* make move not working

* build: update pom to java 21

* ci: update test workflow to run java 21

* infra: update lambdas to java21 (#90)

* chore: test updates (#90)

* chore: create custom gson exclusion annotation (#90)

* chore: change file names (#90)

* chore: change file names (#90)

* infra: tf changes (#90)

* chore: convert to move object (#90)